# veriba

./: .env.example  .gitignore  CONSUMER-API-SPEC.md  Caddyfile  DEMO-DATA.md  FRONTEND-API-INTEGRATION.md  GROWTH-SPEC.md  INTERNAL-ADMIN.md  OAUTH-SPEC.md  PRACTICE-PROFILE-SPEC.md  README.md  VERIBA-API-PLAN.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_member_role_nullable_practice_id.py  0003_saved_cases_followed_practices.py  0004_practice_profile_fields.py  0005_featured_services_blurhash.py  0006_growth_schema.py  0007_followup_patient_user_id.py  0008_user_oauth_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  rate_limit.py  responses.py  security.py
backend/app/db/: base.py  migrations.py  session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: auth.py  credit.py  followup.py  internal.py  me.py  patient.py  practice.py  session.py  user.py
backend/app/scripts/: __init__.py  backfill_blurhashes.py  demo_seed.py  reset_demo_data.py  seed_demo_gallery.py  seed_internal_admin.py
backend/app/services/: consent.py  email.py  images.py  logic.py  oauth.py  push.py  seo.py  storage.py  (+1 more)
backend/tests/: conftest.py  test_approval_photo.py  test_auth.py  test_celery_registration.py  test_consumer.py  test_growth.py  test_internal_admin_seed.py  test_member_followup.py  test_oauth.py  test_phase2_profile.py  test_practice_profile.py  test_privacy.py  test_session_flow.py
(+43 files in other folders)
